# wxFilmEcran

./: CMakeLists.txt  ConnexionDDE.h  README.md  main.cpp  wiki.txt
fr/: messages.mo  messages.po
